# envire-orogen-envire_orogen

./: CMakeLists.txt  envire_core.orogen  envire_orogen.orogen  manifest.xml
orogen/plugins/: spatio_temporal_plugin.rb
orogen/templates/: auto_gen_envire_types.hpp  auto_gen_spatio_temporal_types.hpp  opaque_convertions_spatio_temporal.cpp
rock/: orogen_plugin.rb
rock/typekit/templates/: auto_gen_envire_types.hpp  auto_gen_spatio_temporal_types.hpp  auto_gen_types.hpp  opaque_convertions_boost_serialization.cpp  opaque_convertions_envire_serialization.cpp
